# fastapi-react-full-stack-

./: .env-example  .gitignore  pyproject.toml  readme.md
backend/: main.py  pyproject.toml
backend/config/: backend_pre_start.py  config.py
backend/core/: crud.py  deps.py  security.py
backend/database/: crud.py  db.py
backend/middleware/: logging.py
backend/models/: models.py
backend/routers/: health.py  items.py  login.py  private.py  users.py  utils.py
backend/scripts/: prestart.sh  run_coverage.sh
backend/test/: test_health.py  test_items.py  test_login.py  test_private.py  test_users.py  utils.py
backend/utils/: initial_data.py  utils.py
