[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "pankesh.patel"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "psycopg[binary] (>=3.1.13,<4.0.0)",
    "python-multipart (>=0.0.7,<1.0.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "bcrypt (<4.1.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "emails (>=0.6,<0.7)",
    "jinja2 (>=3.1.6,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
coverage = "^7.9.2"
ruff = "^0.12.2"

